2002-12-12  Earnie Boyd  <earnie@users.sf.net>

	* include/malloc.h (_alloca): Add definition.
	(alloca): Ditto.

2002-12-08  Danny Smith  <dannysmith@users.sourceforge.net>

	* mingwex/math/s_erf.c: New file.
	* mingwex/math/sf_erf.c: New file.
	* mingwex/Makefile.in (MATH_DISTFILES): Add new files.
	(MATH_OBJS): Add new objects.
	* include/math.h (erf[f]): Add prototypes.
	(erfc[f]): Add prototypes.

2002-12-07  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/math.h: Add traditional/XOPEN math constants.

2002-11-27  Danny Smith  <dannysmith@users.sourceforge.net>

	* mingwex/math/lgamma.c: New file.
	* mingwex/math/lgammaf.c: New file.
	* mingwex/math/lgammal.c: New file.
	* mingwex/math/tgamma.c: New file.
	* mingwex/math/tgammaf.c: New file.
	* mingwex/math/tgammal.c: New file.
	* mingwex/math/cephes_mconf (polevlf): Add float version.
	(p1evlf): Likewise.
	Define _CEPHES_USE_ERRNO.
	* mingwex/Makefile.in (MATH_DISTFILES): Add new files.
	(MATH_OBJS): Add new objects.
	* include/math.h (lgamma[fl]): Add prototypes.
	(tgamma[fl]): Add prototypes.

2002-11-26  Danny Smith  <dannysmith@users.sourceforge.net>

	* mingwex/strtold.c: New file.
	* mingwex/wcstold.c: New file.
	* mingwex/ldtoa.c: New file.
	* mingwex/math/cephes_emath.h: New file.
	* mingwex/math/cephes_emath.c: New file.
	* mingwex/Makefile.in (DISTFILES): Add new files.
	(MATH_DISTFILES): Ditto.
	(STDLIB_OBJS): New. Define as strtold.c wcstold.c.
	(MATH_OBJS): Add cephes_emath.o.
	(LIB_OBJS): Add $(STDLIB_OBJS).
	* include/stdlib.h (strtold, wcstold): Add prototypes.
	* include/wchar.h (wcstold): Add prototype.

2002-11-09  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/math.h (sqrt): Remove inline definition.
	(sqrtf): Replace inline definition with prototype.
	(sqrtl): Likewise.
	* mingwex/math/sqrtf.c (sqrtf): Set domain error if
	argument less than zero.
	* mingwex/math/sqrtf.c (sqrtl): Likewise.

2002-10-30  Guido Serassio  <serassio@libero.it>
